fix gap .nav

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -156,7 +156,7 @@ iframe.video {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 25px;
+  gap: 30px;
 }
 
 .nav h2 {
